// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range renders with custom props 1`] = `
<div
  className="ax-slider ax-slider--medium"
  onBlur={[Function]}
  onChange={[MockFunction]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  tabIndex="0"
>
  <div
    className="ax-slider__track"
    onMouseDown={[Function]}
  >
    <div
      className="ax-slider__fill"
      style={
        Object {
          "left": "15%",
          "width": "48.000000000000014%",
        }
      }
    />
    <div
      className="ax-slider__marker"
      style={
        Object {
          "left": "40%",
        }
      }
    />
  </div>
</div>
`;

exports[`Range renders with defaultProps 1`] = `
<div
  className="ax-slider ax-slider--small"
  onBlur={[Function]}
  onChange={[MockFunction]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  tabIndex="0"
>
  <div
    className="ax-slider__track"
    onMouseDown={[Function]}
  >
    <div
      className="ax-slider__fill"
      style={
        Object {
          "left": "15%",
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;
